<resources>
    <string name="app_name">Mytweet</string>
    <string name="button">跳转</string>
    <string name="second_activity">第二个Activity</string>
    <string name="action_search">搜索</string>
    <string name="menu_first_page">首页</string>
    <string name="menu_mine">我的</string>
    <string name="menu_scan">查找</string>
    <string name="menu_feedback">面对面</string>
    <string name="action_add">添加</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="third_fragment">第三个Fragment</string>
    <string name="first_fragment">第一个Fragment</string>
    <string name="second_fragment">第二个Fragment</string>
    <string name="home">首页</string>
    <string name="mine">我的</string>
    <string name="find">发现</string>
    <string name="weibo">微博</string>
    <string name="message">消息</string>
    <string name="loading">登录</string>
    <string name="action_settings">setting</string>
    <string name="empty_string">null</string>
    <string name="hint_please_input_content">请输入文本内容</string>
    <string name="lbl_post">发送</string>
    <string name="lbl_comment">评论</string>
    <string name="article_comment_title">微博正文</string>
    <string name="loading_layout">加载中</string>
    <string name="at_me">\@我的</string>
    <string name="lbl_my_attention">我的关注</string>
    <string name="lbl_like">我的收藏</string>
    <string name="lbl_my_fans">我的粉丝</string>
    <string name="lbl_logout">退出登录</string>
    <string name="toast_press_again_to_exit">再次点击退出应用</string>
</resources>
