<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
      <FrameLayout
          android:id="@+id/flContainer"
          android:layout_weight="1"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"/>


      <android.support.v4.app.FragmentTabHost
          android:id="@+id/tabHost"
          android:visibility="gone"
          android:layout_width="match_parent"
          android:layout_height="wrap_content">
      </android.support.v4.app.FragmentTabHost>
    <RadioGroup
        android:id="@+id/rgTab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <RadioButton
            android:id="@+id/rdHome"
            android:textSize="@dimen/txt_m"
            android:textColor="@drawable/bg_txt_selector"
            android:checked="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:drawablePadding="@dimen/space_xs"
            android:drawableTop="@drawable/bg_rabbar_home_selector"
            android:gravity="center"
            android:text="@string/home" />

        <RadioButton
            android:id="@+id/rdMessage"
            android:textSize="@dimen/txt_m"
            android:textColor="@drawable/bg_txt_selector"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:drawablePadding="@dimen/space_xs"
            android:drawableTop="@drawable/bg_rabbar_message_selector"
            android:gravity="center"
            android:text="@string/message" />

        <RadioButton
            android:id="@+id/rdMine"
            android:textSize="@dimen/txt_m"
            android:textColor="@drawable/bg_txt_selector"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:drawablePadding="@dimen/space_xs"
            android:drawableTop="@drawable/bg_rabbar_mine_selector"
            android:gravity="center"
            android:text="@string/mine" />

    </RadioGroup>


</LinearLayout>