<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_marginTop="@dimen/space_s"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/llAt"
        android:background="@drawable/bg_lineframe_bottom_selector"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_margin="@dimen/space_s"
            android:src="@mipmap/ic_messages_at"
            android:id="@+id/ivAt"
            android:layout_width="@dimen/avatar_size"
            android:layout_height="@dimen/avatar_size"/>
        <TextView
            android:gravity="center_vertical"
            style="@style/tv_m_black_sl"
            android:text="@string/at_me"
            android:layout_marginRight="@dimen/space_m"
            android:drawableRight="@mipmap/ic_arrow_right"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/llComments"
        android:background="@drawable/bg_lineframe_bottom_selector"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_margin="@dimen/space_s"
            android:src="@mipmap/ic_messages_comments"
            android:id="@+id/ivComment"
            android:layout_width="@dimen/avatar_size"
            android:layout_height="@dimen/avatar_size"/>
        <TextView
            android:gravity="center_vertical"
            style="@style/tv_m_black_sl"
            android:text="@string/lbl_my_attention"
            android:layout_marginRight="@dimen/space_m"
            android:drawableRight="@mipmap/ic_arrow_right"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/llLike"
        android:background="@drawable/bg_lineframe_bottom_selector"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_margin="@dimen/space_s"
            android:src="@mipmap/ic_messages_at"
            android:id="@+id/ivGood"
            android:layout_width="@dimen/avatar_size"
            android:layout_height="@dimen/avatar_size"/>
        <TextView
            android:gravity="center_vertical"
            style="@style/tv_m_black_sl"
            android:text="@string/lbl_like"
            android:layout_marginRight="@dimen/space_m"
            android:drawableRight="@mipmap/ic_arrow_right"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>
</LinearLayout>